--- a/index.html
+++ b/index.html
@@ -2,48 +2,40 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>地震速報 × ライブカメラ</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>地震速報連動ライブカメラ</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
-    body {
-      margin: 0;
-      display: flex;
-      flex-direction: row;
-      font-family: sans-serif;
+    body { font-family: sans-serif; margin: 0; padding: 0; }
+    #map { height: 200px; }
+    #video-list { padding: 10px; background: #f9f9f9; }
+    #quake-history { padding: 10px; background: #eee; list-style: none; margin: 0; }
+    #quake-history li { margin-bottom: 4px; }
+    #settings-button {
+      position: fixed; top: 10px; right: 10px; z-index: 1000;
+      background: #444; color: #fff; padding: 6px 12px; border: none; cursor: pointer;
     }
-    #camera-list {
-      width: 360px;
-      padding: 10px;
-      overflow-y: auto;
-      border-right: 1px solid #ccc;
-      background: #f9f9f9;
-      height: 100vh;
+    #settings-panel {
+      position: fixed; top: 50px; right: 10px; background: #fff; border: 1px solid #ccc; padding: 10px; z-index: 1000;
     }
-    #map {
-      flex: 1;
-      height: 100vh;
-    }
-    .camera-item {
-      margin-bottom: 20px;
-    }
-    .camera-item iframe {
-      width: 100%;
-      height: 200px;
-      border: none;
-    }
+    .hidden { display: none; }
   </style>
 </head>
 <body>
-
-  <div id="camera-list">
-    <h2>ライブカメラ（震源地付近）</h2>
-    <div id="camera-items"></div>
+  <button id="settings-button">設定を開く</button>
+  <div id="settings-panel" class="hidden">
+    <label>履歴件数: <input type="number" id="history-limit" value="10" min="1"></label><br>
+    <label>更新間隔(分): <input type="number" id="refresh-interval" value="5" min="1"></label><br>
+    <label>iframe幅: <input type="number" id="iframe-width" value="300"></label><br>
+    <label>iframe高さ: <input type="number" id="iframe-height" value="200"></label><br>
+    <button id="apply-settings">適用</button>
   </div>
 
   <div id="map"></div>
+  <ul id="quake-history"></ul>
+  <div id="video-list"></div>
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="main.js"></script>
-
 </body>
 </html>
