--- a/index.html
+++ b/index.html
@@ -6,35 +6,65 @@
   <title>地震速報連動ライブカメラ</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
-    body { font-family: sans-serif; margin: 0; padding: 0; }
-    #map-container { height: 200px; resize: vertical; overflow: auto; }
-    #map { height: 100%; }
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    #map-container {
+      height: 200px;
+      overflow: hidden;
+    }
+    #map {
+      height: 100%;
+    }
     #resizer, #video-resizer {
       height: 6px;
       background: #ccc;
       cursor: row-resize;
     }
     #video-list {
-      resize: vertical;
-      overflow: auto;
-      min-height: 200px;
       height: 400px;
+      overflow: auto;
       padding: 10px;
       background: #f9f9f9;
     }
-    #quake-history { padding: 10px; background: #eee; list-style: none; margin: 0; }
-    #quake-history li { margin-bottom: 4px; }
+    #quake-history {
+      padding: 10px;
+      background: #eee;
+      list-style: none;
+      margin: 0;
+    }
+    #quake-history li {
+      margin-bottom: 4px;
+    }
     #settings-button {
-      position: fixed; top: 10px; right: 10px; z-index: 1000;
-      background: #444; color: #fff; padding: 6px 12px; border: none; cursor: pointer;
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      z-index: 1000;
+      background: #444;
+      color: #fff;
+      padding: 6px 12px;
+      border: none;
+      cursor: pointer;
     }
     #settings-panel {
-      position: fixed; top: 50px; right: 10px; background: #fff; border: 1px solid #ccc; padding: 10px; z-index: 1000;
+      position: fixed;
+      top: 50px;
+      right: 10px;
+      background: #fff;
+      border: 1px solid #ccc;
+      padding: 10px;
+      z-index: 1000;
     }
-    .hidden { display: none; }
+    .hidden {
+      display: none;
+    }
   </style>
 </head>
 <body>
+
   <button id="settings-button">設定を開く</button>
   <div id="settings-panel" class="hidden">
     <label>履歴件数: <input type="number" id="history-limit" value="10" min="1"></label><br>
@@ -44,48 +74,26 @@
     <button id="apply-settings">適用</button>
   </div>
 
+  <!-- マップ領域 -->
   <div id="map-container">
     <div id="map"></div>
-    <div id="resizer"></div>
   </div>
+
+  <!-- マップと動画の間のリサイズバー -->
+  <div id="resizer"></div>
+
+  <!-- 地震履歴 -->
   <ul id="quake-history"></ul>
-  <div id="video-resizer"></div>
+
+  <!-- 動画リスト表示エリア -->
   <div id="video-list"></div>
 
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script>
-    // マップリサイズバー
-    document.getElementById("resizer").addEventListener("mousedown", function(e) {
-      e.preventDefault();
-      const startY = e.clientY;
-      const startHeight = document.getElementById("map-container").offsetHeight;
-      function doDrag(e) {
-        document.getElementById("map-container").style.height = (startHeight + e.clientY - startY) + "px";
-      }
-      function stopDrag() {
-        document.removeEventListener("mousemove", doDrag);
-        document.removeEventListener("mouseup", stopDrag);
-      }
-      document.addEventListener("mousemove", doDrag);
-      document.addEventListener("mouseup", stopDrag);
-    });
+  <!-- 動画リストの下のリサイズバー -->
+  <div id="video-resizer"></div>
 
-    // 動画リストリサイズバー
-    document.getElementById("video-resizer").addEventListener("mousedown", function(e) {
-      e.preventDefault();
-      const startY = e.clientY;
-      const startHeight = document.getElementById("video-list").offsetHeight;
-      function doDrag(e) {
-        document.getElementById("video-list").style.height = (startHeight + e.clientY - startY) + "px";
-      }
-      function stopDrag() {
-        document.removeEventListener("mousemove", doDrag);
-        document.removeEventListener("mouseup", stopDrag);
-      }
-      document.addEventListener("mousemove", doDrag);
-      document.addEventListener("mouseup", stopDrag);
-    });
-  </script>
+  <!-- ライブラリ・スクリプト -->
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="main.js"></script>
+
 </body>
 </html>
