--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
     <div class="modal-actions">
       <button id="saveSettings">保存</button>
       <button id="closeSettings">閉じる</button>
+<label>表示モード：
+  <select id="modeSelect">
+    <option value="japan">国内のみ</option>
+    <option value="global">海外のみ</option>
+    <option value="both">国内＋海外</option>
+  </select>
+</label>
     </div>
   </div>
 </div>
